package no.rmz.blobeetestproto.api.proto;
option optimize_for = SPEED;

message RpcPar {
	 optional string parameter = 1;
}

message RpcRes {
	 required string returnvalue = 1;
}

service RpcServ {
  rpc Invoke (RpcPar) returns (RpcRes);
}